Finalize client-side account functionality. This includes acct creation, login, and logoff.
Restructured navigation guards, updated app flow

Added a more appropriate landing page for signed out users, add a landing paged for users after signing in.

Implemented client side token handling logic for client-side verifications as well as token forwarding for requests

Added console app to general directory that was used to do a quick data transformation on original the data file to regularize the data in a way that it may be more realistically stored in a relation database such as SQL

--- a/Source/WebService/ClientApp/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/Source/WebService/ClientApp/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -14,16 +14,8 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
                  [ngClass]="{ show: isExpanded }">
                 <ul class="navbar-nav flex-grow">
-                    <li class="nav-item"
-                        [routerLinkActive]="['link-active']"
-                        [routerLinkActiveOptions]="{ exact: true }">
-                        <a class="nav-link text-dark" [routerLink]="['/']">Play</a>
-                    </li>
-                    <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/counter']">History</a>
-                    </li>
-                    <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/']">Account</a>
+                    <li *ngIf="loggedIn" class="nav-item" (click)="logout()">
+                        <a class="nav-link text-dark">Logout</a>
                     </li>
                 </ul>
             </div>
