--- a/Source/WebService/ClientApp/src/app/components/account/account.component.html
+++ b/Source/WebService/ClientApp/src/app/components/account/account.component.html
@@ -1,6 +1,5 @@
-<button class="btn btn-primary btn-lg" (click)="navTest()">Nav Test</button>
-<div class="row justify-content-center">
-    <div class="col-6">
+<div *ngIf="!forLogin" class="row justify-content-center">
+    <div class="col-lg-6 col-sm-12">
         <div class="card">
             <div class="card-header">
                 <h5>Create Account</h5>
@@ -8,8 +7,8 @@
             <div class="card-body">
                 <label for="username">
                     Username
-                    <label *ngIf="shouldDisplayAvailability" [class]="shouldDisplayAvailability ? 'text-success' : 'text-danger'">
-                        {{shouldDisplayAvailability ? '(Available)' : '(Not Available)'}}
+                    <label *ngIf="shouldDisplayAvailability" [class]="usernameAvailable ? 'text-success' : 'text-danger'">
+                        {{usernameAvailable ? '(Available)' : '(Not Available)'}}
                     </label>
                 </label>
                 <input id="username" class="form-control" [ngModel]="username" (ngModelChange)="usernameCheck($event)"/>
@@ -27,17 +26,14 @@
             </div>
             <div class="card-footer d-block">
                 <button class="btn btn-primary float-right mx-1" [style.cursor]="submitDisabled() ? 'not-allowed' : null" [disabled]="submitDisabled()" (click)="createAccount()">Create</button>
-                <button class="btn btn-secondary float-right mx-1">Cancel</button>
+                <button class="btn btn-secondary float-right mx-1" [routerLink]="['/mainmenu']">Cancel</button>
+                <button class="btn btn-outline-secondary float-left mx-1" (click)="forLogin = !forLogin">Login</button>
             </div>
         </div>
     </div>
 </div>
-<br />
-<br />
-<br />
-<br />
-<div class="row justify-content-center">
-    <div class="col-6">
+<div *ngIf="forLogin" class="row justify-content-center">
+    <div class="col-lg-6 col-sm-12">
         <div class="card">
             <div class="card-header">
                 <h5>Login</h5>
@@ -47,11 +43,12 @@
                 <input id="username" class="form-control" [(ngModel)]="username" />
                 <br />
                 <label for="password">Password</label>
-                <input id="password" class="form-control" [(ngModel)]="password" />
+                <input id="password" class="form-control" [(ngModel)]="password" type="password" />
             </div>
             <div class="card-footer d-block">
-                <button class="btn btn-primary float-right mx-1">Login</button>
-                <button class="btn btn-secondary float-right mx-1">Create Account</button>
+                <button class="btn btn-primary float-right mx-1" (click)="login()">Login</button>
+                <button class="btn btn-secondary float-right mx-1" [routerLink]="['/mainmenu']">Cancel</button>
+                <button class="btn btn-outline-secondary float-left mx-1" (click)="forLogin = !forLogin">Create Account</button>
             </div>
         </div>
     </div>
