--- a/Source/WebService/ClientApp/src/app/components/main-menu/main-menu.component.html
+++ b/Source/WebService/ClientApp/src/app/components/main-menu/main-menu.component.html
@@ -6,6 +6,6 @@
         <button class="btn btn-lg btn-outline-secondary" [routerLink]="['/account/create']">Create Account</button>
     </div>
     <div class="col-12 text-center my-1">
-        <button class="btn btn-lg btn-outline-success" [routerLink]="['play/guest']">Play As Guest</button>
+        <button class="btn btn-lg btn-outline-success" [routerLink]="['/play/guest']">Play As Guest</button>
     </div>
 </div>
