Finalized trivia gameplay for account-holding-players.
Answers successfully get saved to the Db as well as play history.

Only TODO left at this point is identifying and pulling games in progress to display in the player menu.

And setting up the Game History page.

--- a/Source/WebService/ClientApp/src/app/components/trivia-game/trivia-game.component.html
+++ b/Source/WebService/ClientApp/src/app/components/trivia-game/trivia-game.component.html
@@ -126,6 +126,7 @@
         <div *ngIf="gameOver" class="card">
             <div class="card-header">
                 <h2 class="m-0">That's a Wrap!</h2>
+                <h2>Total Time: {{getTimeSpent()}}</h2>
             </div>
             <div class="card-body">
                 <blockquote class="blockquote">
