--- a/Source/WebService/ClientApp/src/app/components/player/menu/player-menu.component.html
+++ b/Source/WebService/ClientApp/src/app/components/player/menu/player-menu.component.html
@@ -84,7 +84,11 @@
                 </div>
             </div>
             <div class="card-footer p-0">
-                <svg class="bi bi-chevron-right float-right m-3" fill="currentColor" height="1em" width="1em" viewBox="0 0 16 16">
+                <svg class="bi bi-chevron-right float-right m-3"
+                     style="cursor:pointer" fill="currentColor"
+                     height="1em" width="1em"
+                     viewBox="0 0 16 16"
+                     (click)="manageAccount()">
                     <path d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" fill-rule="evenodd"></path>
                 </svg>
             </div>
